--- a/1-9ensyu.css
+++ b/1-9ensyu.css
@@ -5,32 +5,62 @@
 }
 
 header {
-  width: 100%;
   height: 50px;
   background-color: #ff9a4b;
-  margin-bottom: 50px;
 }
 
 main {
-  width: 940px;
-  margin: 0 auto;
-}
-
-.box {
-}
-.box-image {
-  height: 150px;
+  width: 960px;
+  margin: 50px auto;
+  display: flex;
 }
 
 .box-item {
-  display: inline-block;
   width: 300px;
   background-color: #eeeeee;
+  position: relative;
+  margin-right: 30px;
+  padding: 10px;
+}
+
+.box-item:last-child {
+  margin-right: 0;
+}
+
+.box-img1 {
+  background-image: url(img/flow01.png);
+  height: 150px;
+  background-position: bottom;
+  background-size: cover;
+}
+
+.box-img2 {
+  background-image: url(img/flow02.png);
+  height: 150px;
+  background-position: bottom;
+  background-size: cover;
+}
+
+.box-img3 {
+  background-image: url(img/flow03.png);
+  height: 150px;
+  background-position: bottom;
+  background-size: cover;
+}
+
+.category {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: #ff9a4b;
+  color: white;
+}
+
+.box-text-heading {
+  margin: 15px 0 5px;
 }
 
 footer {
-  width: 100%;
   height: 50px;
   background-color: #aaaaaa;
-  margin-top: 50px;
 }
